--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -47,7 +47,13 @@
 				{
 					"id": -1,
 					"name": "注册",
-					"pathName": "pages/index/reg/reg"
+					"pathName": "pages/index/reg/reg",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "激活",
+					"pathName": "pages/index/active/active"
 				}
 			]
 		}
