--- a/app.json
+++ b/app.json
@@ -5,7 +5,11 @@
     "pages/login/login",
     "pages/me/me",
     "pages/index/reg/reg",
-    "pages/index/active/active"
+    "pages/index/active/active",
+    "pages/index/again/again",
+    "pages/index/transfer/transfer",
+    "pages/index/memberList/memberList",
+    "pages/me/order/order"
   ],
   "window": {
     "backgroundTextStyle": "light",
